<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<group
android:id="@+id/group1"
android:checkableBehavior="single">
<item
        android:id="@+id/home"
        android:icon="@drawable/ic_action_downloads"
        android:title="@string/title_activity_home"
 />
    <item
        android:id="@+id/classrooms"
        android:icon="@drawable/ic_action_downloads"
        android:title="Classrooms"
        />
    <item
        android:id="@+id/connections"
        android:icon="@drawable/ic_action_downloads"
        android:title="Connections"
        />
    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_action_downloads"
        android:title="Post Question And Answer"
        />

<item
    android:id="@+id/item1"
    android:icon="@drawable/ic_action_downloads"
    android:title="@string/title_1"
    />
<item
    android:id="@+id/item2"
    android:icon="@drawable/ic_action_bookmark"
    android:title="@string/title_2" />
<item
    android:id="@+id/item3"
    android:icon="@drawable/ic_action_notifications"
    android:title="@string/title_3" />
</group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="Subtitle">
            <menu>
                <item
                    android:id="@+id/item4"
                    android:icon="@drawable/ic_action_faq"
                    android:title="@string/item_4" />

                <item
                    android:id="@+id/item5"
                    android:icon="@drawable/ic_action_info"
                    android:title="@string/item_5" />

                <item
                    android:id="@+id/item6"
                    android:icon="@drawable/ic_action_logout"
                    android:title="@string/item_6" />
            </menu>
        </item>
    </group>
    </menu>